# rpow

./: .gitignore  README.md
apps/cli/: Cargo.toml
apps/cli/src/: api.rs  main.rs  pow.rs  session.rs  types.rs
apps/server/src/: buildApp.ts  server.ts
apps/server/src/routes/: auth.ts  send.ts
apps/server/tests/: helpers.ts
apps/web/: tsconfig.tsbuildinfo
apps/web/src/: App.tsx
apps/web/src/pages/: Mine.tsx
docs/superpowers/specs/: 2026-05-07-fly-to-vps-migration-design.md
ops/: backup.sh  restore-test.sh
ops/systemd/: rpow-backup.service  rpow-backup.timer
