[package]
name = "rpow-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rpow"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "=4.5.17", features = ["derive", "env"] }
ctrlc = "=3.4.5"
dirs = "5.0"
hex = "0.4"
indexmap = "=2.2.6"
reqwest = { version = "=0.11.27", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
url = "=2.4.1"
uuid = { version = "=1.10.0", features = ["v4"] }
